--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "homepage": "https://github.com/jumpdartmark/planning-server#readme",
   "dependencies": {
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "socket.io": "^4.5.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
+    "@types/uuid": "^8.3.4",
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.3"
